ver1.0.0 new feature: AutoMacroBuilder now support ZAPROXY Context and authentication scheme bugfix: targetStepNo ignored when loading persisted session.
bugfix: targetStepNo ignored when loading persisted session.